UI/src/css/organisms/o-option-sublist.css
o-option-sublist {
    column-gap: 1em;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    row-gap: var(--space-1);

    .a-label-heading-sublist + * {
        margin-block-start: var(--space-2);
    }
}

/* Special codes can follow many different question type controls, inside <o-response>. */
o-response {
    > * + o-option-sublist {
        margin-block-start: var(--space-2);
    }
}

/*
    TODO:
    1. "balance" and "onesize".
    2. Should "special codes" options be "flex-direction: row"?
*/

